<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.TimelineActivity">

    <TextView
        android:id="@+id/tvSearchTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="Select an existing food to add."
        android:textAlignment="center"
        android:textSize="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ListView
        android:id="@+id/lvSearchbar"
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:background="@color/cardview_dark_background"
        android:divider="@android:color/background_dark"
        android:dividerHeight="1.5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSearchTitle"
        tools:ignore="PrivateResource"
        tools:listitem="@android:layout/simple_list_item_1">

    </ListView>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinatorLayout"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:elevation="2dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabMeal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="10dp"
            android:clickable="true"
            android:focusable="true"
            app:srcCompat="@drawable/ic_food" />


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabFood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="10dp"
            android:clickable="true"
            android:focusable="true"
            app:srcCompat="@drawable/ic_food_single" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="10dp"
            android:clickable="true"
            android:focusable="true"
            app:srcCompat="@android:drawable/ic_input_add" />


    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

