<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="450dp"
    android:layout_height="250dp"
    android:layout_gravity="center"
    android:descendantFocusability="afterDescendants"
    android:orientation="vertical"
    android:padding="5dp"
    tools:ignore="PrivateResource">


    <EditText
        android:id="@+id/edibleQuantity"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:hint="Quantity"
        android:inputType="number" />

    <Button
        android:id="@+id/confirmBtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="CONFIRM" />
</LinearLayout>