<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string-array name="activityLevel_array">
        <item>Low</item>
        <item>Medium</item>
        <item>High</item>
    </string-array>
</resources>
